# mixture-mmd-bayes

./: .gitignore  README.md  gaussian_mean_estimation.ipynb  gaussian_mixture_model_estimation.ipynb  pyproject.toml
gmm_estimation/configs/: experiments.yaml  gamma_sweep.yaml  opt.yaml  runner.yaml
gmm_estimation/src/: __init__.py  main.py
gmm_estimation/src/core/: __init__.py  kernels.py  objectives.py  simulators.py
gmm_estimation/src/gamma_sweep/: __init__.py  gamma_sweep.py  gamma_sweep_parallel.py  gamma_sweep_sequential.py
gmm_estimation/src/generator/: __init__.py  make_mixture_gaussian.py
gmm_estimation/src/metrics/: __init__.py  ed2_unbiased.py
gmm_estimation/src/optimizer/: __init__.py  mfld_mix_mmd_vi.py  mfld_mmd_vi.py  mfld_mmd_vi_gmm1.py
gmm_estimation/src/runners/: __init__.py  run.py  run_parallel.py  run_sequantial.py  run_sequential.py
gmm_estimation/src/sampling/: __init__.py  predictive.py
gmm_estimation/src/utils/: __init__.py  config.py  output.py
gmm_estimation/src/viz/: __init__.py  plot_15d.py  plot_1d.py  plot_gamma_sweep.py  plotting.py  workers.py
