[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.1.1+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.16.1+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchaudio==2.1.1+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "tqdm>=4.67.1",
    "pandas>=2.3.3",
]

[tool.uv.sources]
torch = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
]
torchvision = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
]
torchaudio = [
  { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
