[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.1.1+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.16.1+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchaudio==2.1.1+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "tqdm>=4.67.1",
    "pandas>=2.3.3",
    "ruff>=0.14.10",
    "pre-commit>=4.5.1",
    "mypy>=1.19.1",
]

[tool.uv.sources]
torch = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
]
torchvision = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
]
torchaudio = [
  { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
]
ignore = []
extend-ignore = [
    "D100", # undocumented-public-module
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D212", # multi-line-summary-first-line
    "D415", # ends-in-punctuation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
